# optic-metrology

./: .gitignore  pyproject.toml
notebooks/: IT_IDEA.ipynb  Lab1-2.ipynb  interferense.ipynb
notebooks/.ipynb_checkpoints/: IT_IDEA-checkpoint.ipynb  Lab1-2-checkpoint.ipynb  interferense-checkpoint.ipynb
optic_metrology/: cli.py  feature.py  feature_impact.py  meta_info.py  model.py  modeling.py  reader.py  utils.py
optic_metrology/common/models/: video.py  wave.py
optic_metrology/interference/: simulation.py
tests/: test_interference_simulation.py  test_modeling.py  test_reader.py  utils.py
tests/testdata/: iris_fisher.xlsx  models.json  weather_kyiv.csv
