[tool.poetry]
name = "optic-metrology"
version = "0.0.1"
description = "Library for optic metrology"
authors = []
readme = "README.md"
packages = [{include= "optic_metrology"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pandas = "^2.1.0"
numpy = "^1.25.0"
scikit-learn = "^1.3.0"
opencv-python = "^4.8.0.76"
xgboost = "^2.0.0"
lightgbm = "^4.1.0"
chardet = "^5.2.0"
openpyxl = "^3.1.2"
jupyterlab = "^4.0.6"
notebook = "^7.0.4"
matplotlib = "^3.8.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
black = {extras = ["d"], version = "^22.12.0"}
isort = "^5.10.1"
mypy = "^1.4.1"
ipywidgets = "^8.1.1"

[build-system]
requires = "poetry-core"
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100